Changed link colors to grayscale. Fixed navbar overlapping content. Created test post.

--- a/_sass/_custom_navbar.scss
+++ b/_sass/_custom_navbar.scss
@@ -16,6 +16,7 @@
 
 	#navbar-contents {
 		position: fixed;
+		width: auto;
 	}
 
 }
