--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,3 +1,6 @@
+$link-color: #000000;
+$link-hover-color: #4A4A4A;
+
 $navbar-stack-breakpoint: "lg";
 $navbar-size: 3 / 12; // Navbar column width
 
